@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-11T00:30:53Z",
+  "timestamp" : "2022-07-14T08:09:00Z",
   "count_outdated" : 504,
   "uniques_outdated" : 94,
-  "count" : 560,
-  "uniques" : 107,
+  "count" : 561,
+  "uniques" : 108,
   "views" : [
     {
       "timestamp": "2022-07-01T00:00:00Z",
@@ -63,6 +63,13 @@
     },
     {
       "timestamp": "2022-07-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-14T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
