@@ -1,6 +1,6 @@
 {
-  "count": 56,
-  "uniques": 11,
+  "count": 57,
+  "uniques": 12,
   "views": [
     {
       "timestamp": "2022-07-01T00:00:00Z",
@@ -44,6 +44,11 @@
     },
     {
       "timestamp": "2022-07-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-14T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
