@@ -1,3 +1,10 @@
+2022-07-14T08:09:00Z:
+* notice: last 14d: unq all: 12 57
+* notice: prev accum: outdated-unq outdated-all / unq all: 94 504 / 107 560
+* notice: next accum: outdated-unq outdated-all / unq all: 94 504 / 108 561
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-14]
+
 2022-07-11T00:30:53Z:
 * notice: last 14d: unq all: 11 56
 * notice: prev accum: outdated-unq outdated-all / unq all: 93 495 / 107 560
